Use text-align: right instead of float: right to avoid clearing problems
    There's no good element to stick clear:both on.

--- a/share/templates/style.css
+++ b/share/templates/style.css
@@ -50,7 +50,6 @@ h2 {
 }
 
 .feed {
-  float: right;
   color: <% $color{feedLinkFG} %>;
   padding-right: 1em;
   vertical-align: middle;
@@ -78,6 +77,7 @@ dt {
   background: <% $color{taglineBG} %>;
   border: 1px solid <% $color{taglineBorder} %>;
   color: <% $color{taglineFG} %>;
+  text-align: right;
 }
 
 .pod h1, .pod h2 {
